Revert "Revert "Fixed buttons being invisible""
This reverts commit 44a6893cd45b681c19c7e32a3b8e8a9747f93dda.

--- a/src/main/java/com/example/a1project/Task.css
+++ b/src/main/java/com/example/a1project/Task.css
@@ -12,7 +12,6 @@
 }
 
 .button {
-    -fx-background-color: #77B3D4;
     -fx-background-radius: 30;
     -fx-font-family: "Avenir Next";
     -fx-font-size: 48;
@@ -20,6 +19,10 @@
 
 .button:hover {
     -fx-background-color: #a8daf5;
+}
+
+#homeButton {
+    -fx-background-color: #77B3D4;
 }
 
 #addTaskButton, #saveTaskButton {
@@ -38,7 +41,7 @@
     -fx-font-family: "Avenir Next";
 }
 
-.toggle-button， .text-field, .combo-box, .combo-box .combo-box-popup .list-view {
+.toggle-button， .text-field, .combo-box, .combo-box .combo-box-popup .list-view, #deleteButton, #editButton {
     -fx-background-color: white;
     -fx-border-color: -main-color;
     -fx-border-width: 3 3 3 3;
